--- a/match3-game/cinema-wipe.css
+++ b/match3-game/cinema-wipe.css
@@ -76,6 +76,7 @@
 .portrait-cinema .pc-layer img {
   width: 100%;
   height: 100%;
+  min-height: 180px;
   object-fit: contain;
   object-position: center bottom;
   display: block;
